--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- 验证码 -->
+    <dependency>
+      <groupId>com.github.axet</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>0.0.9</version>
+    </dependency>
+
 
   </dependencies>
 
